# kubectl-view-allocations

./: .gitignore  .krew.yaml  .mise.toml  .rtx.toml  BOM.txt  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.txt  MIGRATION_CARGO_MAKE_TO_MISE.md  Makefile.toml  README.md  azure-pipelines.yml  cliff.toml  justfile  release-plz.toml  release.toml
.dependabot/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yaml  krew-update.yaml  release-plz.yaml  release.yaml
examples/: pod_api.rs
scripts/: getLatest.sh
skills/kubectl-view-allocations/: SKILL.md
skills/kubectl-view-allocations/agents/: openai.yaml
skills/kubectl-view-allocations/references/: command-cookbook.md
src/: collect.rs  display.rs  human_format.rs  lib.rs  main.rs  metrics.rs  qty.rs  sort.rs  tree.rs
tests/: kind-cluster-setup.sh  run_ubuntu_16.sh  test_first_run.sh  ubuntu_16.dockerfile
