[package]
name = "kubectl-view-allocations"
version = "0.20.5"
authors = ["David Bernard"]
edition = "2021"
description = "kubectl plugin to list allocations (cpu, memory, gpu,... X utilization, requested, limit, allocatable,...)"
readme = "README.md"
license = "CC0-1.0"
keywords = ["kubectl", "k8s"]
repository = "https://github.com/davidB/kubectl-view-allocations"
homepage = "https://github.com/davidB/kubectl-view-allocations"
exclude = ["/.github", ".gitignore"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
itertools = "0.14"
k8s-openapi = { version = "0.24", default-features = false }
kube = { version = "0.99", features = [
    "ring", # or "aws-lc-rs" for rustls-tls, "ring" is also a dependency of tame-oauth
    "client",
    "gzip",
    "http-proxy",
    "oauth",
    "oidc",
    "rustls-tls",
    "socks5",
    "webpki-roots",
], default-features = false }
prettytable-rs = { version = "0.10", default-features = false, optional = true }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"], optional = true }
tracing = "0.1"
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = [
    "env-filter",
] }

[features]
default = ["cli"]
cli = [
    "dep:tokio",
    "k8s-openapi/earliest",
    "dep:tracing-subscriber",
    "prettytable",
]
prettytable = ["dep:prettytable-rs"]

[[bin]]
name = "kubectl-view-allocations"
path = "src/main.rs"
doc = false
# HACK to define dependencies only for cli
# see https://github.com/rust-lang/cargo/issues/1982
required-features = ["cli"]

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'   # Optimize for size.
codegen-units = 1
strip = true

[profile.dev.package.backtrace]
opt-level = 3
