[package]
name = "kubectl-view-allocations"
version = "1.1.0"
edition = "2024"
description = "kubectl plugin to list allocations (cpu, memory, gpu,...) X (utilization, requested, limit, allocatable,...)"
readme = "README.md"
homepage = "https://github.com/davidB/kubectl-view-allocations"
repository = "https://github.com/davidB/kubectl-view-allocations"
license = "CC0-1.0"
keywords = ["k8s", "kubectl"]
exclude = [".gitignore", "/.github"]

[[bin]]
doc = false
name = "kubectl-view-allocations"
path = "src/main.rs"
# HACK to define dependencies only for cli
# see https://github.com/rust-lang/cargo/issues/1982
required-features = ["cli"]

[dependencies]
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
color-eyre = "0.6"
futures = "0.3"
itertools = "0.14"
k8s-openapi = { version = "0.27", features = ["earliest"] }
kube = { version = "3", default-features = false, features = [
  "client",
  "gzip",
  "http-proxy",
  "oauth",
  "oidc",
  "ring",  # or "aws-lc-rs" for rustls-tls, "ring" is also a dependency of tame-oauth
  "rustls-tls",
  "socks5",
  "webpki-roots",
] }
prettytable-rs = { version = "0.10", default-features = false, optional = true }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"], optional = true }
tracing = "0.1"
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
], optional = true }

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1"

[features]
default = ["cli"]
cli = [
  "dep:tokio",
  "dep:tracing-subscriber",
  "k8s-openapi/earliest",
  "prettytable",
]
prettytable = ["dep:prettytable-rs"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
panic = "abort"
codegen-units = 1
